--- a/src/container/Home/Home.css
+++ b/src/container/Home/Home.css
@@ -33,15 +33,22 @@
     height: 400px;
 }
 
-.col-sm-2 {
-    padding:0px;
-}
-
-.col-sm-10 {
-    padding:0px;
-}
-
 .m-button {
     width: 100%;
     height: 100%;
+}
+
+.smaller {
+    font-size:50%;
+}
+
+.pac-container {
+    background-color: #FFF;
+    z-index: 2001;
+    position: fixed;
+    display: inline-block;
+    float: left;
+}
+.modal{
+    z-index: 2000;
 }
